# fastapi-starter

./: .dockerignore.jinja  README.md  README.md.jinja  copier.yaml  pyproject.toml  pyproject.toml.jinja  {% if use_toml_cfg_mgr %}Makefile{% endif %}.jinja
src/main/: run.py.jinja
src/setup/: app_factory.py.jinja
src/setup/config/: constants.py.jinja  logs.py  settings.py.jinja
src/setup/{% if use_dishka %}ioc{% endif %}/: di_component_enum.py  registry.py
src/{{ module_name }}/infrastructure/sqla_persistence/: orm_registry.py
src/{{ module_name }}/infrastructure/sqla_persistence/alembic/: alembic.ini  config.py  env.py.jinja
src/{{ module_name }}/infrastructure/sqla_persistence/mappings/: all.py
src/{{ module_name }}/main/: cli.py.jinja
{% if use_dishka or use_toml_cfg_mgr %}scripts{% endif %}/{% if use_dishka %}dishka{% endif %}/: plot_dependencies_data.py
{% if use_github_actions %}.github{% endif %}/workflows/: ci.yaml.jinja
{% if use_toml_cfg_mgr %}config{% endif %}/: toml_config_manager.py
{% if use_toml_cfg_mgr %}config{% endif %}/local/: .secrets.toml  Dockerfile  Dockerfile.jinja  config.toml.jinja  docker-compose.yaml.jinja
