[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = { "" = "src" }
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[project]
name = "fastapi-starter"
version = "0.1.0"
description = ""
readme = "README.md"
authors = [
    { name = "Ivan Borovets", email = "130386813+ivan-borovets@users.noreply.github.com" },
]
requires-python = ">=3.12.0"

dependencies = [
    "alembic==1.14.0",
    "alembic-postgresql-enum==1.4.0",
    "dishka==1.4.2",
    "fastapi==0.115.6",
    "orjson==3.10.12",
    "psycopg[binary]==3.2.3",
    "pydantic[email]==2.10.3",
    "rtoml==0.11.0",
    "sqlalchemy[mypy]==2.0.36",
    "uuid6==2024.7.10",
    "uvicorn==0.32.1",
    "uvloop==0.21.0"
]

[project.optional-dependencies]
dev = [
    "black==24.10.0",
    "isort==5.13.2",
    "pre-commit==4.0.1",
    "pylint==3.3.2",
    "ruff==0.8.2"
]

[tool.black]
line-length = 88
exclude = 'README\.md'

[tool.isort]
profile = "black"

[tool.mypy]
plugins = [
    "pydantic.mypy",
]
exclude = "^.*alembic.*$"
strict = true
ignore_missing_imports = true
allow_subclassing_any = true
disallow_untyped_defs = false

[tool.pylint.main]
ignore-paths = "^.*alembic.*$"
disable = [
    "C0111", # "missing-docstring"
    "C0415", # "import-outside-toplevel"
    "E1101", # "no-member"
    "R0801", # "duplicate-code"
    "R0902", # "too-many-instance-attributes"
    "R0903", # "too-few-public-methods"
    "R0913", # "too-many-arguments"
    "R0917", # "too-many-positional-arguments"
    "R1705", # "no-else-return"
    "R1711", # "useless-return"
    "R1720", # "no-else-raise"
    "W0613", # "unused-argument"
    "W0706", # "try-except-raise"
    "W0718", # "broad-exception-caught"
]
max-line-length = 88

[tool.ruff]
line-length = 88
